--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -4,7 +4,7 @@
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
 # Website name
-title: Tianyi Liu
+title: Dr.-Ing. Tianyi Liu
 # Website URL
 baseURL: 'https://example.com/'
 
