--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -35,7 +35,7 @@ header:
     show_search: true
     show_theme_chooser: true
     logo:
-      text: "Tianyi Liu"
+      text: "Dr.-Ing. Tianyi Liu"
 
 # Site footer
 footer:
