--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -5,7 +5,7 @@
 
 # Appearance
 appearance:
-  mode: light # light, dark, or system
+  mode: system # light, dark, or system
   color: emerald
 
 # SEO
