--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -6,7 +6,7 @@
 # Website name
 title: Dr.-Ing. Tianyi Liu
 # Website URL
-baseURL: 'https://example.com/'
+baseURL: 'https://tianyiliu.work/'
 
 ############################
 ## LANGUAGE
