--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -23,7 +23,7 @@ marketing:
     fathom: ''
     pirsch: ''
   verification:
-    google: ''
+    google: 'google-site-verification=qKywIOH-00qnTXsonfZfGtVxcJb3ket-xZTE10WWD2U'
     baidu: ''
 
 # Site header
